--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseurl = "https://pghege.com"
 title = "Gabe Hege"
 # copyright = "&copy; 2017 Gabe Hege"
-theme = "academic"
+theme = "academia"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
 
